updated to allow bootstrap negative margins and styling of dropdown to stop spacing between list and button

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -38,12 +38,15 @@ $theme-colors: (
   'dark': $dark,
 );
 
+//Input variables
+
 $input-bg: $light;
 $input-placeholder-color: $white;
 $input-border-color: $light;
 
 $enable-rounded: false;
 
+//Button variables
 $btn-hover-bg-shade-amount: 0;
 $btn-hover-bg-tint-amount: 0;
 $btn-hover-border-shade-amount: 0;
@@ -52,6 +55,9 @@ $btn-active-bg-shade-amount: 0;
 $btn-active-bg-tint-amount: 0;
 $btn-active-border-shade-amount: 0;
 $btn-active-border-tint-amount: 0;
+
+//enable negative margins
+$enable-negative-margins: true;
 
 //custom classes
 
